tests/NormalTests/paczka1/small_fuzzy/42091363.err
Error in line 7: TR8 S51 88,0
Error in line 4: S938 S713 94,7
